finished all parts of this stupid final.

--- a/mongod.conf
+++ b/mongod.conf
@@ -6,10 +6,10 @@
 # need to create and set permissions for this directory manually,
 # e.g., if the parent directory isn't mutable by the mongodb user.
 #dbpath=/var/lib/mongodb
-dbpath=/data/db
+dbpath=D:/data/db
 
 #where to log
-logpath=/var/log/mongodb/mongod.log
+logpath=/data/mongod.log
 
 logappend=true
 
