--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<spring.version>2.0.4.RELEASE</spring.version>
 		<jackson.version>2.9.6</jackson.version>
+		<thymeleaf.version>3.0.9.RELEASE</thymeleaf.version>
 	</properties>
 
 	<dependencies>
@@ -60,6 +61,16 @@
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf</artifactId>
+			<version>${thymeleaf.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring5</artifactId>
+			<version>${thymeleaf.version}</version>
 		</dependency>
 	</dependencies>
 
